--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -22,6 +22,10 @@ mat-icon {
   padding-top: 31px;
   padding-bottom: 31px;
   display: inline;
+
+  @media screen and (max-width: 600px) {
+    padding-top: 0;
+  }
 }
 
 @media screen and (max-width: 1079px) {
@@ -32,17 +36,24 @@ mat-icon {
 
 .cards-container {
   display: flex;
+  margin-top: 30px;
   flex-direction: row;
   .card-left {
     flex: 3;
-    margin: 40px;
+    margin: 30px;
     background-image: url("/assets/img/bg-queue.png");
+    @media screen and (max-width: 600px) {
+      margin: 10px;
+    }
   }
   .card-right {
     flex: 2;
     margin: 40px;
     background-image: url("/assets/img/bg-open.png");
     min-width: 186px;
+    @media screen and (max-width: 600px) {
+      margin: 10px;
+    }
   }
 }
 
