--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,5 @@
 <footer class="app-footer">
-    <div class="footer-content">
-        <markdown [src]="markdownUrl">
-        </markdown>
-    </div>
+  <div class="footer-content">
+    <markdown [src]="markdownUrl"> </markdown>
+  </div>
 </footer>
