--- a/src/app/invitations/invitation-already-accepted-dialog.html
+++ b/src/app/invitations/invitation-already-accepted-dialog.html
@@ -1,11 +1,10 @@
-
 <h1 mat-dialog-title>
-  {{ "inviteForm.editInvite" | translate }}
+  {{ 'inviteForm.editInvite' | translate }}
 </h1>
 
 <div mat-dialog-content>
-  <p>{{ "inviteForm.cantUpdateAcceptedInvite" | translate  }}</p>
+  <p>{{ 'inviteForm.cantUpdateAcceptedInvite' | translate }}</p>
 </div>
 <div mat-dialog-actions>
-  <button mat-button mat-dialog-close >{{"overlay.close"|translate}}</button>
+  <button mat-button mat-dialog-close>{{ 'overlay.close' | translate }}</button>
 </div>
