--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,7 +2,7 @@
   [title]="'profile.profile' | translate"
   [icon]="'stat'"></app-top-nav>
 
-<div style="margin-top: 110px" class="cards-container">
+<div class="cards-container">
   <mat-card class="card-left">
     <div class="desc">
       <h2 class="capitalize">
