--- a/src/app/test-media/test-media.component.html
+++ b/src/app/test-media/test-media.component.html
@@ -7,10 +7,9 @@
         <mat-spinner [diameter]="60"></mat-spinner>
       </div>
       <ng-container *ngIf="!showSpinner">
-
         <div class="left">
-          <h2 class="error-message">{{error}}</h2>
-          <h2>{{ "testMedia.microTest" | translate }}</h2>
+          <h2 class="error-message">{{ error }}</h2>
+          <h2>{{ 'testMedia.microTest' | translate }}</h2>
 
           <!-- <mat-form-field class="device--select" *ngIf="audioDevices.length > 0">
           <mat-select matNativeControl [required]="audioDevices.length > 1" [(ngModel)]="audioDeviceId" [disabled]="audioDevices.length < 2" (selectionChange)="initAudioPublisher()">
@@ -23,11 +22,11 @@
           <div id="volume-container">
             <div id="volume-slider" [style.width.%]="100 - volumeLevel"></div>
           </div>
-          <p>{{ "testMedia.aProperlyTuned" | translate }}</p>
+          <p>{{ 'testMedia.aProperlyTuned' | translate }}</p>
         </div>
 
         <div class="right">
-          <h2>{{ "testMedia.cameraTest" | translate }}</h2>
+          <h2>{{ 'testMedia.cameraTest' | translate }}</h2>
 
           <!-- <mat-form-field class="device--select" *ngIf="videoDevices.length > 0">
           <mat-select matNativeControl [required]="videoDevices.length > 1" [(ngModel)]="videoDeviceId" [disabled]="videoDevices.length < 2" (selectionChange)="initVideoPublisher()">
@@ -41,8 +40,7 @@
             <app-peer-video
               #streamComponentLocal
               *ngIf="myCamStream"
-              [stream]="myCamStream"
-            ></app-peer-video>
+              [stream]="myCamStream"></app-peer-video>
           </div>
         </div>
       </ng-container>
