--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,62 +1,60 @@
 <ng-container>
   <app-top-nav
     [title]="'dashboard.dashboard' | translate"
-    [icon]="'dashboard'"
-  ></app-top-nav>
+    [icon]="'dashboard'"></app-top-nav>
 
   <app-overlay
     (close)="chatOpen = false"
     *ngIf="chatOpen"
-    [consultation]="currentConsultation"
-  >
+    [consultation]="currentConsultation">
   </app-overlay>
-  <div style="margin-top: 110px" class="cards-container">
+  <div class="cards-container">
     <mat-card class="card-left">
       <div class="desc">
         <h2>
-          {{ "dashboard.waitingRoom" | translate }}
+          {{ 'dashboard.waitingRoom' | translate }}
         </h2>
         <p>
-          {{ "dashboard.consultationsListInAwaitingTreatment" | translate }}
+          {{ 'dashboard.consultationsListInAwaitingTreatment' | translate }}
         </p>
       </div>
       <button
         *ngIf="pendingConsultations.length"
         (click)="acceptNextConsultation()"
         class="next-con-btn"
-        mat-button
-      >
-        {{ "dashboard.startNextConsultation" | translate }}
+        mat-button>
+        {{ 'dashboard.startNextConsultation' | translate }}
       </button>
       <h4 class="noCon" *ngIf="!pendingConsultations.length">
-        {{ "dashboard.noConsultation" | translate }}
+        {{ 'dashboard.noConsultation' | translate }}
       </h4>
 
-        <button *ngIf="!pendingConsultations.length"
-                (click)="openDialog()"
-                class="invite-btn"
-                mat-button
-                type="submit"
-                color="primary">
-            {{ "dashboard.sendNewInvite" | translate }}
-        </button>
+      <button
+        *ngIf="!pendingConsultations.length"
+        (click)="openDialog()"
+        class="invite-btn"
+        mat-button
+        type="submit"
+        color="primary">
+        {{ 'dashboard.sendNewInvite' | translate }}
+      </button>
 
       <table *ngIf="pendingConsultations.length" class="pending-consultations">
         <tr *ngFor="let pc of pendingConsultations" (click)="showChat(pc._id)">
           <td>
             <span class="tile-header">{{
-              "dashboard.patient" | translate
+              'dashboard.patient' | translate
             }}</span>
-            {{ pc.consultation.firstName + " " + pc.consultation.lastName }}
+            {{ pc.consultation.firstName + ' ' + pc.consultation.lastName }}
           </td>
           <td>
             <span class="tile-header">{{
-              "dashboard.message" | translate
+              'dashboard.message' | translate
             }}</span>
-            {{ pc.lastMsg ? pc.lastMsg.text : "Nouvelle consultation" }}
+            {{ pc.lastMsg ? pc.lastMsg.text : 'Nouvelle consultation' }}
           </td>
           <td>
-            <span class="tile-header">{{ "dashboard.time" | translate }}</span>
+            <span class="tile-header">{{ 'dashboard.time' | translate }}</span>
             {{
               (pc.lastMsg ? pc.lastMsg.createdAt : pc.consultation.createdAt)
                 | msgTime
@@ -69,24 +67,22 @@
         *ngIf="pendingConsultations.length"
         routerLink="/pending-consultations"
         mat-button
-        class="view-more-btn"
-      >
-        {{ "dashboard.displayTheList" | translate }}
+        class="view-more-btn">
+        {{ 'dashboard.displayTheList' | translate }}
       </button>
       <mat-icon
         *ngIf="pendingConsultationsCount"
         class="badge total-badge"
         [matBadge]="pendingConsultationsCount"
-        matBadgeColor="warn"
-      ></mat-icon>
+        matBadgeColor="warn"></mat-icon>
     </mat-card>
 
     <mat-card class="card-right">
       <div class="desc">
-        <h2>{{ "dashboard.openedConsultations" | translate }}</h2>
+        <h2>{{ 'dashboard.openedConsultations' | translate }}</h2>
         <p>
           {{
-            "dashboard.consultationsListAwaitingToBeClosedOrCompleted"
+            'dashboard.consultationsListAwaitingToBeClosedOrCompleted'
               | translate
           }}
         </p>
@@ -94,23 +90,22 @@
 
       <div
         *ngIf="activeConsultations.length"
-        style="height: 36px; margin: 20px; width: 200px"
-      ></div>
+        style="height: 36px; margin: 20px; width: 200px"></div>
 
       <h4 class="noCon" *ngIf="!activeConsultations.length">
-        {{ "dashboard.noConsultation" | translate }}
+        {{ 'dashboard.noConsultation' | translate }}
       </h4>
 
       <table *ngIf="activeConsultations.length" class="active-consultations">
         <tr *ngFor="let ac of activeConsultations" (click)="showChat(ac._id)">
           <td>
             <span class="tile-header">{{
-              "dashboard.patient" | translate
+              'dashboard.patient' | translate
             }}</span>
-            {{ ac.consultation.firstName + " " + ac.consultation.lastName }}
+            {{ ac.consultation.firstName + ' ' + ac.consultation.lastName }}
           </td>
           <td>
-            <span class="tile-header">{{ "dashboard.time" | translate }}</span>
+            <span class="tile-header">{{ 'dashboard.time' | translate }}</span>
             {{
               (ac.lastMsg ? ac.lastMsg.createdAt : ac.consultation.createdAt)
                 | msgTime
@@ -122,8 +117,7 @@
               class="badge"
               matBadgePosition="before"
               [matBadge]="ac.unreadCount"
-              matBadgeColor="warn"
-            ></mat-icon>
+              matBadgeColor="warn"></mat-icon>
           </td>
           <td class="arrow">
             <mat-icon svgIcon="next"></mat-icon>
@@ -135,15 +129,13 @@
         *ngIf="activeConsultations.length"
         routerLink="/active-consultations"
         mat-button
-        class="view-more-btn"
-      >
-        {{ "dashboard.displayTheList" | translate }}
+        class="view-more-btn">
+        {{ 'dashboard.displayTheList' | translate }}
       </button>
       <mat-icon
         class="badge total-badge"
         [matBadge]="activeConsultationsCount"
-        matBadgeColor="warn"
-      ></mat-icon>
+        matBadgeColor="warn"></mat-icon>
     </mat-card>
   </div>
 </ng-container>
