--- a/src/app/filter-modal/filter-modal.component.html
+++ b/src/app/filter-modal/filter-modal.component.html
@@ -1,43 +1,60 @@
 <h2 mat-dialog-title *ngIf="appLiedFiltersCount">
-    {{'filter.filtersApplied' | translate}}
-    <app-badge [text]="appLiedFiltersCount">{{appLiedFiltersCount}}</app-badge>
+  {{ 'filter.filtersApplied' | translate }}
+  <app-badge [text]="appLiedFiltersCount">{{ appLiedFiltersCount }}</app-badge>
 </h2>
 <h2 mat-dialog-title *ngIf="!appLiedFiltersCount">
-    {{'filter.filters' | translate}}
+  {{ 'filter.filters' | translate }}
 </h2>
 <mat-dialog-content>
-    <div class="accordion-wrapper">
-        <button mat-raised-button  *ngIf="appLiedFiltersCount"  [mat-dialog-close]="'clear'" class="clear-btn secondary-button-outlined">{{ 'filter.clear' | translate }}</button>
-        <mat-accordion multi>
-            <mat-expansion-panel>
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        {{'filter.queue' | translate}}
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <ng-container *ngFor="let queue of queues; let i = index">
-                    <mat-checkbox [(ngModel)]="queue.selected">
-                        <mat-label class="label">{{ queue.name }}</mat-label>
-                    </mat-checkbox>
-                </ng-container>
-            </mat-expansion-panel>
-        </mat-accordion>
-        <div style="margin-top: 10px">
-            <mat-accordion multi>
-                <mat-expansion-panel>
-                    <mat-expansion-panel-header>
-                        <mat-panel-title>
-                            {{'filter.sent_by' | translate}}
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <mat-checkbox [(ngModel)]="createdByMe"> {{'filter.myself' | translate}} </mat-checkbox>
-                    <mat-checkbox [(ngModel)]="createdByNotMe"> {{'filter.somebodyElse' | translate}} </mat-checkbox>
-                </mat-expansion-panel>
-            </mat-accordion>
-        </div>
+  <div class="accordion-wrapper">
+    <button
+      mat-raised-button
+      *ngIf="appLiedFiltersCount"
+      [mat-dialog-close]="'clear'"
+      class="clear-btn secondary-button-outlined">
+      {{ 'filter.clear' | translate }}
+    </button>
+    <mat-accordion multi>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            {{ 'filter.queue' | translate }}
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <ng-container *ngFor="let queue of queues; let i = index">
+          <mat-checkbox [(ngModel)]="queue.selected">
+            <mat-label class="label">{{ queue.name }}</mat-label>
+          </mat-checkbox>
+        </ng-container>
+      </mat-expansion-panel>
+    </mat-accordion>
+    <div style="margin-top: 10px">
+      <mat-accordion multi>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              {{ 'filter.sent_by' | translate }}
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <mat-checkbox [(ngModel)]="createdByMe">
+            {{ 'filter.myself' | translate }}
+          </mat-checkbox>
+          <mat-checkbox [(ngModel)]="createdByNotMe">
+            {{ 'filter.somebodyElse' | translate }}
+          </mat-checkbox>
+        </mat-expansion-panel>
+      </mat-accordion>
     </div>
+  </div>
 </mat-dialog-content>
 <mat-dialog-actions [align]="'end'">
-    <button mat-raised-button mat-dialog-close class="secondary-button-outlined">{{ 'filter.cancel' | translate }}</button>
-    <button mat-button class="apply-button primary-button" [mat-dialog-close]="getSelectedFilters()">Apply</button>
+  <button mat-raised-button mat-dialog-close class="secondary-button-outlined">
+    {{ 'filter.cancel' | translate }}
+  </button>
+  <button
+    mat-button
+    class="apply-button primary-button"
+    [mat-dialog-close]="getSelectedFilters()">
+    Apply
+  </button>
 </mat-dialog-actions>
