--- a/src/app/forgot-password/forgot-password.component.scss
+++ b/src/app/forgot-password/forgot-password.component.scss
@@ -27,6 +27,26 @@
 .container {
   width: 400px;
   margin: auto;
+
+  @media (max-width: 600px) {
+    margin: 30px;
+  }
+
+  ::ng-deep .mat-focused .mat-form-field-label {
+    color: white !important;
+  }
+
+  ::ng-deep.mat-form-field-underline {
+    background-color: white !important;
+  }
+
+  ::ng-deep.mat-form-field-ripple {
+    background-color: white !important;
+  }
+
+  ::ng-deep .mat-form-field-label {
+    color: white !important;
+  }
 }
 
 .at {
@@ -43,15 +63,14 @@
   font-size: 16px;
 }
 
-ng-container {
-}
 
 .wrap {
   width: 100%;
   height: 100%;
   background-image: url("/assets/bg-splash@2x.png");
-  background-size: 100% 100%;
-  position: absolute;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   top: 0;
   position: fixed;
   display: flex;
