--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,7 +1,7 @@
 
 .example-form {
   min-width: 150px;
-  max-width: 500px;
+  //max-width: 500px;
   width: 100%;
   &.separated {
     margin-top: 40px;
@@ -49,6 +49,10 @@
 .container {
   width: 400px;
   margin: auto;
+
+  @media (max-width: 600px) {
+    margin: 30px;
+  }
 }
 
 .at {
@@ -72,8 +76,9 @@ ng-container {
   width: 100%;
   height: 100%;
   background-image: url("/assets/bg-splash@2x.png");
-  background-size: 100% 100%;
-  position: absolute;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   top: 0;
   position: fixed;
   display: flex;
