--- a/src/app/overlay/overlay.component.scss
+++ b/src/app/overlay/overlay.component.scss
@@ -1,17 +1,26 @@
-.resume-element {
-  margin-top: 5px;
-  width: 20%;
-  display: inline-block;
+.elements-wrapper {
+  display: flex;
+  flex-wrap: wrap;
 }
+.resume-element {
+  width: 20%;
+  display: flex;
+  margin-top: 5px;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
 .resume-value {
   height: 62%;
   font-size: 1em;
   padding-top: 5px;
 }
+
 .resume-label {
   font-size: 0.7em;
   color: #ccc;
 }
+
 .overlay {
   position: fixed; /* Sit on top of the page content */
   display: block; /* Hidden by default */
@@ -25,6 +34,7 @@
   z-index: 1011; /* Specify a stack order in case you're using a different order for other elements */
   cursor: pointer; /* Add a pointer on hover */
 }
+
 .overlay-content {
   position: absolute;
   top: 10px;
@@ -35,19 +45,26 @@
   z-index: 130;
   background-color: white;
 }
+
 .overlay-header {
   background-color: #266eb7;
   padding: 30px;
   color: white;
 }
+
 .chat-cont {
-  width: 33.33%;
-  height: 100%;
-  position: fixed;
-  z-index: 112;
-  background-color: #fafafa;
-  min-width: 400px;
   right: 0;
+  height: 100%;
+  z-index: 112;
+  width: 33.33%;
+  position: fixed;
+  min-width: 400px;
+  background-color: #fafafa;
+
+  @media (max-width: 600px) {
+    width: 100%;
+    overflow: auto;
+  }
 }
 
 .btn-div {
@@ -61,17 +78,36 @@
 }
 
 .header {
-  position: fixed;
-  width: 33.33%;
-  min-width: 400px;
-  border-bottom: 1px solid rgb(209, 209, 209);
+  top: 0;
   margin: 0;
   padding: 0;
-  background-color: #ffffff;
-  top: 0;
-  height: 70px;
   z-index: 100;
-  margin-right: 100px;
+  width: 33.33%;
+  position: fixed;
+  min-width: 400px;
+  background-color: var(--app-white);
+  border-bottom: 1px solid rgb(209, 209, 209);
+
+
+  .close-icon {
+    display: none;
+  }
+
+  @media (max-width: 600px) {
+    width: 100%;
+    height: 50px;
+    .close-icon {
+      top: 10px;
+      right: 10px;
+      width: 35px;
+      height: 35px;
+      display: flex;
+      font-size: 30px;
+      font-weight: 700;
+      position: absolute;
+    }
+
+  }
 }
 
 .header h3 {
@@ -86,13 +122,12 @@
   display: inline-block;
   width: 24.333%;
   text-align: center;
-  // line-height: 406%;
 }
 
 .bubble {
   border-radius: 6px;
-  // min-width:270px;
 }
+
 .incoming > div > div.bubble {
   background-color: var(--primary-color);
   color: #ffffff;
@@ -105,24 +140,23 @@ span.msg-time {
   font-size: 10px;
   color: rgb(58, 58, 58);
 }
+
 div.msg-time {
   min-width: 80%;
   flex-direction: row-reverse;
 }
+
 .outgoing,
 .incoming {
   // min-width:270px;
   width: 70%;
   margin-top: 16px;
 }
-// .bubble{
-//   width:70%;
-// }
+
 .outgoing {
-  // width:70%;
-  // margin-right:2%;
   margin-left: 30%;
 }
+
 .outgoing > div > div.bubble {
   padding: 8px 14px 8px 14px;
 
@@ -131,9 +165,11 @@ div.msg-time {
 
   margin-right: 0;
 }
+
 .outgoing div.msg-time {
   justify-content: flex-end;
 }
+
 .outgoing span.msg-time {
   text-align: right;
   float: right;
@@ -143,25 +179,11 @@ div.msg-time {
   font-size: 13px;
 }
 
-div.chat {
-  height: 100%;
-  margin: 2%;
-  padding: 2%;
-  margin-bottom: 65px;
-  margin-top: 80px;
-  width: 94%;
-}
-
 div.resume-c-btn {
   text-align: center;
 
-  display: inline-block;
-  // display: table;
-  width: 21.333%;
-
   background-color: var(--primary-color);
-  color: #ffffff;
-  // line-height: 50%;
+  color: var(--app-white);
   display: table-cell;
   vertical-align: middle;
   cursor: pointer;
@@ -169,8 +191,6 @@ div.resume-c-btn {
 
   right: 0;
   position: fixed;
-  width: 33.33%;
-  min-width: 400px;
 
   margin: 0;
   padding: 0;
@@ -178,51 +198,64 @@ div.resume-c-btn {
   bottom: 0;
   height: 70px;
   z-index: 120;
-  // margin-right:100px;
+
+  width: 33.33%;
+  min-width: 400px;
+
+  @media (max-width: 600px) {
+    width: 100%;
+  }
 }
 
 div.btns {
   right: 0;
-  position: fixed;
-  width: 33.33%;
-  min-width: 400px;
-
   margin: 0;
   padding: 0;
-
   bottom: 0;
   height: 70px;
   z-index: 120;
-  vertical-align: middle;
+  display: flex;
+  position: fixed;
   cursor: pointer;
-  line-height: 406%;
   text-align: center;
-  color: #ffffff;
+  vertical-align: middle;
+  color: var(--app-white);
+  width: 33.33%;
+  min-width: 400px;
+
+  @media (max-width: 600px) {
+    width: 100%;
+  }
+
+  .resume,.close {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
-div.btns div:first-child {
-  background-color: #e3393a;
+div.btns .close {
+  background-color: var(--app-red);
 }
-div.btns div:last-child {
-  background-color: var(--app-green) !important;
+
+div.btns .resume {
+  background-color: var(--app-green);
 }
 
 .btn {
   position: absolute;
   bottom: 10%;
-  margin: auto;
+  padding: 2px 16px;
   display: block;
-
-  background-color: var(--primary-color);
   border-radius: 60px;
   text-align: center;
-  width: 80%;
-  height: 43px;
-  color: #ffffff;
+  color: var(--app-white);
+  background-color: var(--primary-color);
 }
 
 .btn.danger {
-  background-color: #e3393a;
+  background-color: var(--app-red);
 }
 
 div.act-cont {
@@ -230,6 +263,10 @@ div.act-cont {
   padding: 30px;
   flex: 1;
   text-align: center;
+
+  @media (max-width: 600px) {
+    padding: 0;
+  }
 }
 
 .act-cont p {
@@ -249,43 +286,47 @@ div.act-cont {
     border: 2px solid #ddd;
     margin: 0 20px;
     padding: 10px;
-    background: #fff;
+    background: var(--app-white);
 
     &.selected {
       border-color: #086baf;
     }
+
     img {
       max-width: 100%;
     }
   }
 }
+
 textarea {
   color: #444;
-  border: 1px solid #ddd;
-  border-radius: 10px;
   width: 94%;
-  min-height: 100px;
-  padding: 5px 10px;
   resize: vertical;
   font-size: 0.9em;
+  min-height: 100px;
+  padding: 5px 10px;
+  border-radius: 10px;
+  border: 1px solid #ddd;
 }
+
 textarea:focus {
   border-color: #086baf;
 }
+
 .buttons {
   text-align: center;
 
   button {
     margin: 10px 3%;
-    display: inline-block;
-    border-radius: 60px;
-    text-align: center;
-    width: 40%;
-    color: #fff;
     font-size: 0.9em;
+    text-align: center;
+    border-radius: 60px;
+    display: inline-block;
     padding: 3px 30px 2px;
+    color: var(--app-white);
   }
 }
+
 .submit-btn {
   background: var(--primary-color);
 }
@@ -306,4 +347,96 @@ textarea:focus {
     padding: 6px 12px;
     margin-right: 20px;
   }
+}
+
+.feedback-overlay {
+
+  .feedback-overlay-content  {
+    @media (max-width: 600px) {
+      inset: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+}
+
+.close-content {
+
+  .close-content-inner {
+    top: 20%;
+    right: 15%;
+    width: 70%;
+    z-index: 130;
+    min-height: 300px;
+    position: absolute;
+    background-color: var(--app-white);
+
+    @media (max-width: 600px) {
+      top: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+
+    .header {
+      width: 100%;
+      min-width: 100%;
+      position: static;
+      text-align: center;
+
+      h2 {
+        font-weight: 200
+      }
+    }
+
+    .actions-wrapper {
+      height: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      background-color: #f2f7f7;
+
+
+      @media (max-width: 600px) {
+        flex-direction: column;
+      }
+
+      .act-cont {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        &:not(:last-child) {
+          border-right: 1px solid #cacaca;
+        }
+        .btn {
+          @media (min-width: 600px) {
+            margin-top: auto;
+          }
+          position: sticky;
+          bottom: 0;
+        }
+
+
+        @media (max-width: 600px) {
+          border-bottom: 1px solid #cacaca;
+        }
+      }
+    }
+  }
+}
+
+.overlay-wrapper {
+  top: 60px;
+  width: 100%;
+  position: absolute;
+  height: calc(100% - 150px);
+
+
+  @media (max-width: 600px) {
+    top: 60px;
+
+  }
+
 }
