--- a/src/app/test-media/test-media.component.scss
+++ b/src/app/test-media/test-media.component.scss
@@ -4,23 +4,32 @@ mat-form-field {
 }
 
 .container {
-  margin-top: 90px;
+  margin: 60px 30px 20px 30px;
   padding-bottom: 20px;
-  width: 80%;
-  margin-left: 10%;
+  width: 92%;
   min-height: 300px;
   background: #fff;
-  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2),
+  0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  display: flex;
+  flex-direction: row;
+
+  @media screen and (max-width: 1079px) {
+    margin: 30px 10px;
+    width: auto;
+    flex-direction: column;
+  }
 
   .left,
   .right {
-    display: inline-block;
     width: 50%;
-    height: 400px;
-    vertical-align: top;
     padding: 10px 5%;
+    vertical-align: top;
     box-sizing: border-box;
+
+    @media screen and (max-width: 1079px) {
+      width: 100%;
+    }
 
     .error-message {
       color: red;
@@ -38,12 +47,12 @@ mat-form-field {
   width: 95%;
   border: 1px solid #eaeaea;
   background: linear-gradient(
-    90deg,
-    rgba(252, 220, 1, 1) 25%,
-    rgba(41, 218, 0, 1) 52%,
-    rgba(41, 218, 0, 1) 82%,
-    rgba(252, 220, 1, 1) 94%,
-    rgba(194, 0, 0, 1) 100%
+                  90deg,
+                  rgba(252, 220, 1, 1) 25%,
+                  rgba(41, 218, 0, 1) 52%,
+                  rgba(41, 218, 0, 1) 82%,
+                  rgba(252, 220, 1, 1) 94%,
+                  rgba(194, 0, 0, 1) 100%
   );
 
   #volume-slider {
@@ -56,7 +65,6 @@ mat-form-field {
 }
 
 #video-container {
-  width: 320px;
   height: 240px;
   border: 1px solid #d6d6d6;
   background: #fafafa;
@@ -64,10 +72,12 @@ mat-form-field {
   display: flex;
   z-index: 10;
 }
+
 .loading {
-  margin-top: 20px;
+  width: 100%;
   display: flex;
+  margin-top: 20px;
+  min-height: 300px;
   align-items: center;
   justify-content: center;
-  min-height: 300px;
 }
