--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,4 +1,10 @@
 :root {
   --primary-color: #2871BD;
   --app-green: #007f00;
+  --app-green-2: #80BE03FF;
+  --app-white: #FFF;
+  --app-red: #e3393a;
+  --app-gray: #464F60FF;
+  --app-gray-2: #909090FF;
+
 }
